--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^4.2.5",
     "morgan": "~1.6.1",
     "node-geocoder": "^3.4.1",
+    "request-ip": "^1.2.2",
     "serve-favicon": "~2.3.0"
   }
 }
